--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -13,17 +13,18 @@
     "symlink:mac": "mkdir -p .symlinks && ln -sFh \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
     "symlink": "(npm run symlink:mac) || (npm run symlink:linux)",
     "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
-    "prebuild": "(npm run symlink) && (npm run gen) && (tsc --noEmit)",
     "build:x86": "(npm run prebuild) && (sam build)",
     "build:arm": "(npm run prebuild) && (sam build --parallel)",
-    "build": "npm run build:arm",
+    "prebuild": "(npm run gen) && (tsc --noEmit)",
+    "build": "(npx ts-node-esm --experimentalSpecifierResolution=node build.ts) && sam build",
     "deploy": "npm run build && sam deploy",
     "deploy:live": "npm run build && sam deploy --config-env live",
     "stripe": "stripe listen --forward-to https://api.v2.payment.devfastchargeapi.com/accept-stripe-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.devfastchargeapi.com/finish-stripe-onboard -e 'account.updated'",
     "logs": "sam logs --tail",
     "logs:live": "sam logs --config-env live --tail",
-    "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
-    "watch": "nodemon -e ts,graphql,yml,yaml,json -i __generated__ --signal SIGINT -x 'npm run typecheck'",
+    "prestart": "npm run build",
+    "start": "sam local start-api -p 3000 --warm-containers lazy",
+    "watch": "nodemon -e ts,graphql,yml,yaml,json -i __generated__ --signal SIGINT -x 'npm run start'",
     "test": "jest --runInBand",
     "fix": "eslint --fix ./",
     "pretypecheck": "npm run gen",
