--- a/auth-service/codegen.yml
+++ b/auth-service/codegen.yml
@@ -2,7 +2,7 @@
 # to generate types based on our schema.
 # documents:
 #   - "./node/**/*.ts"
-schema: "../graphql-service/apollo/schema/Public.graphql"
+schema: "../graphql-service/apollo/__generated__/Public.final.graphql"
 generates:
   # Specify where our generated types should live.
   ./__generated__/gql-operations.ts:
