--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -2,10 +2,10 @@
 # to generate types based on our schema.
 # documents:
 #   - "./cron-jobs/*.ts"
-schema: "./schema/Public.graphql"
 generates:
   # Specify where our generated types should live.
   ./__generated__/gql/:
+    schema: "./__generated__/Public.final.graphql"
     preset: client
     documents:
       - "./cron-jobs/*.ts"
@@ -13,6 +13,7 @@ generates:
       - "./pks/*.ts"
       - "./tests/**/*.ts"
   ./__generated__/resolvers-types.ts:
+    schema: "./schema/Public.graphql"
     plugins:
       - "typescript"
       - "typescript-resolvers"
