--- a/search-service/codegen.yml
+++ b/search-service/codegen.yml
@@ -3,7 +3,7 @@
 # documents:
 #   - "./handlers/**/*.ts"
 #   - "./utils/**/*.ts"
-schema: "../graphql-service/apollo/schema/Public.graphql"
+schema: "../graphql-service/apollo/__generated__/Public.final.graphql"
 generates:
   # Specify where our generated types should live.
   ./__generated__/gql-operations.ts:
