--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -8,19 +8,21 @@
     "scripts": {
         "build:build-scripts": "esbuild --platform=node --outdir='./dist' --format=cjs --out-extension:.js=.cjs --bundle --external:esbuild --external:graphql ./build-scripts/*.ts",
         "gen:schema": "(npm run build:build-scripts) && node ./dist/genSchema.cjs",
-        "gen": "(npm run gen:schema) && graphql-codegen --config codegen.yml",
+        "gen": "(npm run gen:schema) && graphql-codegen --config codegen.yml --project default && graphql-codegen --config codegen.yml --project tests",
         "typecheck": "(npm run gen) && tsc --noEmit",
         "build": "(npm run typecheck) && node ./dist/build.cjs",
         "start": "(npm run build) && (TRUST_X_USER_PK_HEADER=1 TRUST_X_USER_EMAIL_HEADER=1 TRUST_X_IS_SERVICE_REQUEST_HEADER=1 node --enable-source-maps ./dist/devserver.cjs) || exit 1",
         "watch": "npx nodemon --config ./.nodemon.config.json -x \"npm run start\"",
-        "test": "jest",
-        "coverage": "npm run test -- --coverage --runInBand",
+        "test": "npx jest",
+        "coverage": "npx jest --coverage --runInBand",
+        "coverage:incremental": "./build-scripts/runINcrementalCoverage.bash",
+        "coverage:reset": "./build-scripts/resetCoverageForFile.bash",
         "sam": "cd ../ && make watch",
         "fix": "eslint --fix ./",
         "start:sqs": "npx ts-node-esm --experimentalSpecifierResolution=node ./dev-sqs-server.ts",
         "watch:sqs": "npx nodemon --config ./.nodemon.config.json -x \"npm run start:sqs\"",
-        "crosstypecheck": "LOCAL_GRAPHQL=1 && (npm run typecheck) & (cd $WS_DIR/payment-service && npm run typecheck) & (cd $WS_DIR/auth-service && npm run typecheck) & (cd $WS_DIR/fastchargeapi-cli && npm run typecheck) & (cd $WS_DIR/gateway-service && npm run typecheck) && wait && echo All good!",
-        "watch:crosstypecheck": "npx nodemon --config ./.nodemon.config.json -x \"npm run crosstypecheck\"",
+        "crossecheck:type": "LOCAL_GRAPHQL=1 && (npm run typecheck) & (cd $WS_DIR/payment-service && npm run typecheck) & (cd $WS_DIR/auth-service && npm run typecheck) & (cd $WS_DIR/fastchargeapi-cli && npm run typecheck) & (cd $WS_DIR/gateway-service && npm run typecheck) && wait && echo All good!",
+        "crossecheck:type:watch": "npx nodemon --config ./.nodemon.config.json -x \"npm run crosstypecheck\"",
         "crosscheck": "LOCAL_GRAPHQL=1 && (npm run typecheck) && (cd $WS_DIR/payment-service && npm run test) && (cd $WS_DIR/auth-service && npm run test) && (cd $WS_DIR/fastchargeapi-cli && npm run test) && (cd $WS_DIR/gateway-service && npm run test) && echo All good!"
     },
     "author": "",
