--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -55,25 +55,25 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "^2.8.7",
     "@graphql-codegen/typescript-operations": "^3.0.0",
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
-    "@jest/globals": "^29.4.3",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/object-hash": "^3.0.2",
-    "babel-jest": "^29.4.3",
-    "eslint-plugin-jest-extended": "^2.0.0",
     "jest": "^29.4.3",
     "jest-extended": "^4.0.2",
     "json5": "^2.2.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
+    "jest-extended": "^4.0.2",
+    "ts-jest": "^29.0.5"
   }
 }
