--- a/graphql-service/apollo/tsconfig.json
+++ b/graphql-service/apollo/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
+    "types": ["jest"],
     "strictFunctionTypes": false,
     "strictPropertyInitialization": false,
     "allowJs": true,
@@ -23,7 +24,7 @@
   },
   "exclude": ["node_modules", "dist"],
   "include": ["**/*"],
-  "files": ["global.d.ts", "node_modules/jest-extended/types/index.d.ts"],
+  "files": ["global.d.ts", "tests/global.d.ts"],
   "ts-node": {
     "experimentalResolver": true,
     "require": ["tsconfig-paths/register"],
