--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -67,13 +67,11 @@
     "jest": "^29.4.3",
     "jest-extended": "^4.0.2",
     "json5": "^2.2.3",
-    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "@types/jest": "^29.4.0",
     "jest": "^29.4.3",
-    "jest-extended": "^4.0.2",
-    "ts-jest": "^29.0.5"
+    "jest-extended": "^4.0.2"
   }
 }
