--- a/auth-service/tsconfig.json
+++ b/auth-service/tsconfig.json
@@ -1,33 +1,10 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
-    "skipLibCheck": true,
-    "rootDirs": ["./"],
-    "outDir": "dist",
-    "lib": ["es2022"],
-    "target": "es2022",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "types": ["node"],
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictNullChecks": true,
-    "useUnknownInCatchVariables": true,
-    "strictFunctionTypes": false,
-    "strictPropertyInitialization": false, // doesn't work with our Item type declarations in models.ts
-    "allowJs": true,
-    "strict": true,
-    "noEmit": true,
-    "typeRoots": ["./node_modules/@types", "../graphql-service/apollo/@types"],
-    "baseUrl": "../",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["graphql-service/apollo/*"],
-      "graphql-service": ["graphql-service/apollo"],
-      "graphql-service/*": ["graphql-service/apollo/*"]
+      "@/*": ["node_modules/graphql-service-apollo/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["**/*"]
 }
