--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "lib": [
       "es2022"
     ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
-    // "jsx": "preserve",                                /* Specify what JSX code is generated. */
+    "jsx": "preserve" /* Specify what JSX code is generated. */,
     "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
     // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h'. */
@@ -94,7 +94,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["**/node_modules", "**/dist", "**/.aws-sam"],
   "include": ["**/*"],
   "files": ["global.d.ts"],
   "lib": ["es2020"]
