--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -7,9 +7,6 @@
     "test": "tests"
   },
   "scripts": {
-    "symlink:linux": "mkdir -p .symlinks && ln -sFfT \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
-    "symlink:mac": "mkdir -p .symlinks && ln -sFh \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
-    "symlink": "(npm run symlink:mac) || (npm run symlink:linux)",
     "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
     "build-go": "cd app && go build && rm app",
     "build-node": "npm run symlink && npm run gen && tsc --noEmit",
@@ -28,51 +25,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.7.9",
-    "@apollo/server": "^4.3.1",
-    "@as-integrations/aws-lambda": "^2.0.0",
     "@aws-sdk/client-dynamodb": "^3.258.0",
     "@aws-sdk/client-rds-data": "^3.344.0",
     "@aws-sdk/client-secrets-manager": "^3.347.1",
     "@aws-sdk/client-sqs": "^3.272.0",
     "@aws-sdk/util-dynamodb": "^3.288.0",
-    "@aws/dynamodb-data-mapper": "^0.7.3",
-    "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
-    "@types/uuid": "^9.0.1",
     "chalk": "^5.2.0",
-    "dataloader": "^2.1.0",
-    "decimal.js-light": "^2.5.1",
-    "dynamoose": "github:yuliswe/dynamoose#dist",
-    "dynamoose-logger": "^3.1.0",
-    "dynamoose-utils": "^3.1.0",
-    "graphql": "^16.6.0",
-    "graphql-scalars": "^1.20.1",
-    "jsonwebtoken": "^9.0.0",
-    "node-fetch": "^2.6.11",
-    "object-hash": "^3.0.0",
-    "stripe": "^11.14.0",
-    "uuid": "^9.0.0"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@graphql-codegen/cli": "^2.16.5",
-    "@graphql-codegen/client-preset": "^2.0.0",
-    "@graphql-codegen/typescript": "^2.8.7",
-    "@graphql-codegen/typescript-operations": "^3.0.0",
-    "@graphql-codegen/typescript-resolvers": "^2.7.12",
-    "@jest/globals": "^29.4.3",
-    "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.11.18",
-    "@types/object-hash": "^3.0.2",
-    "babel-jest": "^29.4.3",
-    "jest": "^29.4.3",
-    "nodemon": "^2.0.21",
-    "react": "^18.2.0",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "@types/aws-lambda": "^8.10.130",
+    "aws-lambda": "^1.0.7",
+    "graphql-service-apollo": "file:../graphql-service/apollo"
   }
 }
