Split GraphQL schema getUser(pk,email) to getUser(pk) and getUserByEmail(email)

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -3,6 +3,8 @@ projects:
     schema:
       - "graphql-service/apollo/schema/Public.graphql"
       - "graphql-service/apollo/__generated__/Public.final.graphql"
+    documents:
+      - "graphql-service/apollo/tests/resolvers/*/*.ts"
     extensions:
       languageService:
         cacheSchemaFileForLookup: false
