--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Workspace for FastchargeAPI source code.",
   "main": "index.js",
   "scripts": {
+    "run-ts": "node -r esbuild-register --loader esbuild-register/loader",
+    "lint-configs": "npm run run-ts ./project-linter.ts",
     "echo-build-order": "echo auth search graphql payment gateway echo",
     "test": "for s in $(npm run --silent echo-build-order | sed 's/ /\\n/g'); do (cd ${s}-service && npm run test); done",
     "deploy": "for s in $(npm run --silent echo-build-order | sed 's/ /\\n/g'); do (cd ${s}-service && npm run deploy); done",
@@ -20,27 +22,31 @@
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/typescript-operations": "^3.0.1",
-    "@jest/globals": "^29.5.0",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-jest": "^29.5.0",
     "esbuild": "^0.19.2",
     "esbuild-jest": "^0.5.0",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^32.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "glob": "^10.3.10",
     "graphql": "^16.7.1",
     "jest": "^29.5.0",
     "jest-esbuild": "^0.3.0",
+    "jest-extended": "^4.0.2",
+    "json5": "^2.2.3",
     "nodeman": "^1.1.2",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5"
